--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
             <div class="col-md-6 col-lg-4">
                 <div class="login-card">
                     <div class="login-header">
-                        <h2><i class="fas fa-building me-2"></i>SiteVisit Pro</h2>
+                        <h2><i class="fas fa-building me-2"></i>SiteVisit </h2>
                         <p class="mb-0">Site Visit Management System</p>
                     </div>
                     <div class="card-body p-4">
