--- a/templates/components/property_requirements.html
+++ b/templates/components/property_requirements.html
@@ -1,3 +1,4 @@
+<!-- PROPERTY REQUIREMENTS SECTION -->
 <div class="card mb-4">
     <div class="card-header bg-info text-white">
         <h5 class="card-title mb-0">Property Requirements</h5>
@@ -35,28 +36,6 @@
                     <option value="">Select preferred location</option>
                     <!-- Options will be loaded dynamically -->
                 </select>
-                <div class="form-text">
-                    <a href="/locations" target="_blank" class="text-decoration-none">
-                        <i class="fas fa-plus me-1"></i>Manage Locations
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Current Location</label>
-                <select class="form-select select2-location" name="current_location" id="currentLocation">
-                    <option value="">Select current location</option>
-                    <!-- Options will be loaded dynamically -->
-                </select>
-                <div class="form-text">
-                    <a href="/locations" target="_blank" class="text-decoration-none">
-                        <i class="fas fa-plus me-1"></i>Manage Locations
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Building Name</label>
-                <input type="text" class="form-control" name="building_name" 
-                       placeholder="Enter building name">
             </div>
             <div class="col-md-6">
                 <label class="form-label">Preferred Projects</label>
