--- a/templates/components/client_info.html
+++ b/templates/components/client_info.html
@@ -1,75 +1,98 @@
 <!-- CLIENT DATA SECTION -->
 <div class="card mb-4">
-    <div class="card-header bg-dark text-white">
-        <h5 class="card-title mb-0">1. Client Data</h5>
-    </div>
-    <div class="card-body">
-        <div class="row g-3">
-            <div class="col-md-6">
-                <label class="form-label">Client Name *</label>
-                <input type="text" class="form-control" name="name" required>
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Mobile Number *</label>
-                <input type="tel" class="form-control" name="mobile" readonly>
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Secondary Number</label>
-                <input type="tel" class="form-control" name="secondary_number" maxlength="10">
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Email</label>
-                <input type="email" class="form-control" name="email">
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Current Location</label>
-                <select class="form-select select2-location" name="current_location" id="currentLocation">
-                    <option value="">Select current location</option>
-                    <!-- Options will be loaded dynamically -->
-                </select>
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Building Name</label>
-                <input type="text" class="form-control" name="building_name" placeholder="Enter building name">
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Lead Source</label>
-                <select class="form-select" name="lead_source">
-                    <option value="">Select lead source</option>
-                    <option value="Website">Website</option>
-                    <option value="Facebook">Facebook</option>
-                    <option value="Instagram">Instagram</option>
-                    <option value="Referral">Referral</option>
-                    <option value="Walk-in">Walk-in</option>
-                    <option value="Newspaper">Newspaper</option>
-                    <option value="Google Ads">Google Ads</option>
-                    <option value="Broker">Broker</option>
-                </select>
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">Lead Source Project</label>
-                <input type="text" class="form-control" name="lead_source_project" placeholder="Project that generated lead">
-            </div>
+  <div class="card-header bg-dark text-white">
+    <h5 class="card-title mb-0">1. Client Data</h5>
+  </div>
+  <div class="card-body">
+    <div class="row g-3">
+      <div class="col-md-6">
+        <label class="form-label">Client Name *</label>
+        <input type="text" class="form-control" name="name" required />
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Mobile Number *</label>
+        <input type="tel" class="form-control" name="mobile" readonly />
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Secondary Number</label>
+        <input
+          type="tel"
+          class="form-control"
+          name="secondary_number"
+          maxlength="10"
+        />
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Email</label>
+        <input type="email" class="form-control" name="email" />
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Current Location</label>
+        <select
+          class="form-select select2-location"
+          name="current_location"
+          id="currentLocation"
+        >
+          <option value="">Select current location</option>
+          <!-- Options will be loaded dynamically -->
+        </select>
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Building Name</label>
+        <input
+          type="text"
+          class="form-control"
+          name="building_name"
+          placeholder="Enter building name"
+        />
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Lead Source</label>
+        <select class="form-select" name="lead_source">
+          <option value="">Select lead source</option>
+          <option value="99 Acres">99 Acres</option>
+          <option value="Magicbricks">Magicbricks</option>
+          <option value="Google Ads">Google Ads</option>
+          <option value="Meta Ads">Meta Ads</option>
+          <option value="Instagram Videos">Instagram Videos</option>
+          <option value="Referral">Referral</option>
+          <option value="Newspaper">Newspaper</option>
+          <option value="Event">Event</option>
+          <option value="Telecalling">Telecalling</option>
+          <option value="Internal Reference">Internal Reference</option>
+          <option value="Walk-In">Walk-In</option>
+          <option value="Housing.com">Housing.com</option>
+        </select>
+      </div>
 
-            <!-- 🆕 New Ethnicity Field -->
-            <div class="col-md-6">
-                <label class="form-label">Ethnicity</label>
-                <select class="form-select" name="ethnicity">
-                    <option value="">Select ethnicity</option>
-                    <option value="Gujrati">Gujrati</option>
-                    <option value="Marwadi">Marwadi</option>
-                    <option value="Kutchi">Kutchi</option>
-                    <option value="Jain">Jain</option>
-                    <option value="South Indian">South Indian</option>
-                    <option value="North Indian">North Indian</option>
-                    <option value="Maharashtrian">Maharashtrian</option>
-                    <option value="Muslim">Muslim</option>
-                    <option value="Bengali">Bengali</option>
-                    <option value="Sindhi">Sindhi</option>
-                    <option value="Parsi">Parsi</option>
-                </select>
-            </div>
+      <div class="col-md-6">
+        <label class="form-label">Lead Source Project</label>
+        <input
+          type="text"
+          class="form-control"
+          name="lead_source_project"
+          placeholder="Project that generated lead"
+        />
+      </div>
 
-        </div>
+      <!-- 🆕 New Ethnicity Field -->
+      <div class="col-md-6">
+        <label class="form-label">Ethnicity</label>
+        <select class="form-select" name="ethnicity">
+          <option value="">Select ethnicity</option>
+          <option value="Gujrati">Gujrati</option>
+          <option value="Marwadi">Marwadi</option>
+          <option value="Kutchi">Kutchi</option>
+          <option value="Jain">Jain</option>
+          <option value="South Indian">South Indian</option>
+          <option value="North Indian">North Indian</option>
+          <option value="Maharashtrian">Maharashtrian</option>
+          <option value="Muslim">Muslim</option>
+          <option value="Bengali">Bengali</option>
+          <option value="Sindhi">Sindhi</option>
+          <option value="Parsi">Parsi</option>
+        </select>
+      </div>
     </div>
+  </div>
 </div>
